# py-shinywidgets

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sitecustomize.py  test.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: py-check.yaml  py-release.yaml  pytest.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/superpowers/specs/: 2026-04-10-shinywidgets-manager-state-bulk-restore-design.md
examples/: 01_hello.py  basic.py  input_gallery.py  outputs.py  plotly.py  reprex.py  reprex2.py  reprex3.py  slider.py  static.py  test.py
examples/altair/: app.py
examples/fill/: app.py
examples/ipyleaflet/: app.py
examples/ipywidgets/: app.py  requirements.txt
examples/ipywidgets/rsconnect-python/: ipywidgets.json
examples/outputs/: README.md  app.py  flights.yaml  requirements.txt
examples/plotly/: README.md  app.py  requirements.txt
examples/pydeck/: app.py
examples/superzip/: README.md  app.py  ratelimit.py  requirements.txt  styles.css  superzip.csv  utils.py
ipyshiny/: __init__.py  _comm.py  _dependencies.py  _ipyshiny.py  _serialization.py  dependencies.py  ipyshiny.py
ipyshiny/static/: output.js  vendors-node_modules_codemirror_mode_apl_apl_js-node_modules_codemirror_mode_asciiarmor_ascii-26282f.output.js
js/: package-lock.json  package.json  webpack.config.js
js/src/: _input.ts  comm.ts  input.ts  manager.ts  output.ts  plotly.ts  utils.ts
js/test/: plotly.test.ts
scripts/: static_download.R
shinywidgets/: __init__.py  __version.py  _as_widget.py  _bulk_state.py  _cdn.py  _comm.py  _dependencies.py  _output_widget.py  _render_widget.py  _render_widget_base.py  _serialization.py  _shinywidgets.py  _utils.py  _version.py
shinywidgets/static/: libembed-amd.js  node_modules_codemirror_mode_sync_recursive_js_.output.js  output.js  shinywidgets.css
tests/: __init__.py  conftest.py  test_dependency_resolution.py  test_ipyshiny.py  test_issue_223_plotly_rerender.py  test_version_metadata.py
tests/playwright/: conftest.py  playwright-pytest.ini
tests/playwright/altair_rerender_cleanup/: app.py  test_altair_rerender_cleanup.py
tests/playwright/bokeh_mount_prefix/: app.py  test_bokeh_mount_prefix.py
tests/playwright/bokeh_rerender_cleanup/: app.py  test_bokeh_rerender_cleanup.py
tests/playwright/buffer_transport/: app.py  test_buffer_transport.py
tests/playwright/delayed_anywidget_resize/: app.py  test_delayed_anywidget_resize.py
tests/playwright/example_plotly_afterplot_stable/: app.py  test_example_plotly_afterplot_stable.py
tests/playwright/fileupload_buffers/: app.py  test_fileupload_buffers.py
tests/playwright/ipyleaflet_click_marker_first_click/: app.py  test_ipyleaflet_click_marker_first_click.py
tests/playwright/ipyleaflet_geojson_hover/: app.py  test_ipyleaflet_geojson_hover.py
tests/playwright/ipyleaflet_layer_update/: app.py  test_ipyleaflet_layer_update.py
tests/playwright/ipyleaflet_live_layer_updates/: app.py  test_ipyleaflet_live_layer_updates.py
tests/playwright/ipyleaflet_marker_click/: app.py  test_ipyleaflet_marker_click.py
tests/playwright/ipyleaflet_rerender_cleanup/: app.py  test_ipyleaflet_rerender_cleanup.py
tests/playwright/issue_221_isolate/: app.py  test_issue_221_isolate.py
tests/playwright/plotly_first_paint/: app.py  test_plotly_first_paint.py
tests/playwright/plotly_initial_settle/: app.py  test_plotly_initial_settle.py
tests/playwright/plotly_rerender_cleanup/: app.py  test_plotly_rerender_cleanup.py
tests/unit/: __init__.py  _fakes.py  conftest.py  test_as_widget.py  test_bulk_state.py  test_comm_transport.py  test_dependencies.py  test_output_widget.py  test_render_widget.py  test_render_widget_base_layout_defaults.py  test_render_widget_base_lifecycle.py  test_serialization.py  test_shinywidgets_reactivity.py  test_smoke.py  test_utils.py  test_widget_bootstrap.py
