[metadata]
name = ipyshiny
version = attr: ipyshiny.__version__
author = Carson Sievert
author_email = carson@rstudio.com
url = https://github.com/rstudio/ipyshiny
description = Render ipywidgets in Shiny applications
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/rstudio/ipyshiny/issues
    Documentation = https://github.com/rstudio/ipyshiny/
    Source Code = https://github.com/rstudio/ipyshiny/


[options]
python_requires = >=3.7
packages = find:
test_suite = tests
include_package_data = True
setup_requires =
    setuptools
install_requires =
  ipywidgets>=7.6.5
  jupyter_core
  shiny>=0.2.0.9006
  python-dateutil>=2.8.2
tests_require =
    pytest>=3
zip_safe = False

[options.packages.find]
include = ipyshiny, ipyshiny.*

[options.package_data]
ipyshiny = py.typed


[flake8]
ignore = E203, E302, E402, E501, F403, F405, W503
exclude = docs
