[metadata]
name = shinywidgets
version = attr: shinywidgets.__version__
author = Carson Sievert
author_email = carson@rstudio.com
url = https://github.com/rstudio/py-shinywidgets
description = Render ipywidgets in Shiny applications
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/rstudio/py-shinywidgets/issues
    Documentation = https://github.com/rstudio/py-shinywidgets/
    Source Code = https://github.com/rstudio/py-shinywidgets/

[options]
python_requires = >=3.7
packages = find:
test_suite = tests
include_package_data = True
setup_requires =
    setuptools
install_requires =
  ipywidgets>=7.6.5
  jupyter_core
  shiny>=0.2.0.9007
  python-dateutil>=2.8.2
  importlib-metadata>=4.8.3
tests_require =
    pytest>=3
zip_safe = False

[options.packages.find]
include = shinywidgets, shinywidgets.*

[options.package_data]
shinywidgets = py.typed


[flake8]
ignore = E203, E302, E402, E501, F403, F405, W503
exclude = docs
